Update index.html and server.py for improved rendering; add style.css for background color

--- a/Day51-60/Day56/templates/index.html
+++ b/Day51-60/Day56/templates/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Raj</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-    <h1>I am Raj</h1>
+  <h1>I'm Raj</h1>
 </body>
 </html>
