Update index.html and server.py for improved rendering; add style.css for background color

--- a/Day51-60/Day56/templates/index.html
+++ b/Day51-60/Day56/templates/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Raj</title>
-    <link rel="stylesheet" href="../static/style.css">
+  <meta charset="utf-8">
+  <title>Rajpal Nishad</title>
+  <link rel="stylesheet" href="../static/css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+  <link rel="icon" href="../static/favicon.ico">
 </head>
+
 <body>
-  <h1>I'm Raj</h1>
+  <div class="top-container">
+    <img class="top-cloud" src="../static/images/cloud.png" alt="cloud">
+    <div class="title-text">
+      <h1>I'm Rajpal.</h1>
+      <h2>a <span class="pro">pro</span>grammer.</h2>
+    </div>
+    <img class="bottom-cloud" src="../static/images/cloud.png" alt="cloud">
+    <img class="mountain" src="../static/images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img src="../static/images/raj.jpg" alt="rajpal-profile-img" style="border-radius: 25%; width: 200px;">
+      <h2>Hello.</h2>
+      <p class="intro">I am a Frontend Developer and a final year B.Tech Computer Science student. I have a passion for learning new technologies, especially in the field of Generative AI. I enjoy coding, playing cricket, and watching movies to relax.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="code-img" src="https://media.giphy.com/media/LmNwrBhejkK9EFP504/giphy.gif" alt="code-img">
+
+        <h3>Design & Development</h3>
+        <p>I am a skilled Frontend developer with experience in JavaScript frameworks. I also have a strong foundation in Data Structures and Algorithms and have received certifications from IBM SkillsBuild, Nxt Wave, and NPTEL.</p>
+
+      </div>
+      <div class="skill-row">
+        <img class="chilli-img" src="https://media.giphy.com/media/L1R1tvI9svkIWwpY2E/giphy.gif" alt="data-gif">
+
+        <h3>Data Analytics & Automation</h3>
+        <p>I am proficient in Python, including libraries like Pandas and NumPy, for data analysis and automation. I have experience with web scraping using Selenium and have worked with APIs and JSON to handle data. I have also created interactive data visualizations using Matplotlib.</p>
+
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you're interested in my work or want to connect.</h3>
+      <p class="contact-message">Feel free to reach out to me for any collaborations or just to say hi! Let's build something amazing together.</p>
+      <a class="btn" href="mailto:rajpal010304@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/rajpalnishad">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/FoXDev-404">GitHub</a>
+    <a class="footer-link" href="https://discordapp.com/users/nishad_raj">Discord</a>
+    <p class="copyright">© 2025 Rajpal Nishad.</p>
+  </div>
 </body>
+
 </html>
