--- a/Day51-60/Day56/templates/Raj_Portfolio.html
+++ b/Day51-60/Day56/templates/Raj_Portfolio.html
@@ -1,19 +1,16 @@
-<!DOCTYPE HTML>
-<!--
-	Paradigm Shift by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
+<!DOCTYPE html>
+<!-- saved from url=(0022)http://127.0.0.1:5000/ -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Rajpal's Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="../static/assets/css/main.css" />
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta name="description" content="">
+		<meta name="keywords" content="">
+		<link rel="stylesheet" href="../static/assets/css/main.css">
+		<link rel="stylesheet" href="../static/assets/css/fontawesome-all.min.css">
+
 	</head>
-	<body class="is-preload">
+	<body class="" contenteditable="false">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -22,26 +19,18 @@
 					<section class="intro">
 						<header>
 							<h1>R. Nishad</h1>
-							<p>A free responsive site template designed by <a href="https://github.com/FoXDev-404">@FoXDev-404</a></p>
+							<p>A free responsive site template designed by FoXdev-404</p>
 							<ul class="actions">
-								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+								<li><a href="http://127.0.0.1:5000/#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="../static/images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="./Rajpal&#39;s Portfolio_files/pic01.jpg" alt=""></span>
 						</div>
 					</section>
 
 				<!-- Section -->
-					<section id="first">
-						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
-						</header>
-						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="../static/images/pic02.jpg" alt="" /></span>
-						</div>
-					</section>
+					
 
 				<!-- Section -->
 					<section>
@@ -63,61 +52,7 @@
 					</section>
 
 				<!-- Section -->
-					<section>
-						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
-						</header>
-						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="../static/images/gallery/fulls/01.jpg" class="landscape"><img src="../static/images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="../static/images/gallery/fulls/02.jpg"><img src="../static/images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="../static/images/gallery/fulls/03.jpg"><img src="../static/images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="../static/images/gallery/fulls/04.jpg" class="landscape"><img src="../static/images/gallery/thumbs/04.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="../static/images/gallery/fulls/05.jpg" class="landscape"><img src="../static/images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="../static/images/gallery/fulls/06.jpg"><img src="../static/images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="../static/images/gallery/fulls/07.jpg"><img src="../static/images/gallery/thumbs/07.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="../static/images/gallery/fulls/08.jpg" class="portrait"><img src="../static/images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="../static/images/gallery/fulls/09.jpg" class="portrait"><img src="../static/images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="../static/images/gallery/fulls/10.jpg" class="landscape"><img src="../static/images/gallery/thumbs/10.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-						</div>
-					</section>
+					
 
 				<!-- Section -->
 					<section>
@@ -127,8 +62,8 @@
 						<div class="content">
 							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
 							<ul class="actions">
-								<li><a href="#" class="button primary large">Get Started</a></li>
-								<li><a href="#" class="button large">Learn More</a></li>
+								<li><a href="http://127.0.0.1:5000/#" class="button primary large">Get Started</a></li>
+								<li><a href="http://127.0.0.1:5000/#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
@@ -411,17 +346,17 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<form>
 								<div class="fields">
 									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="name" id="name" placeholder="Name">
 									</div>
 									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
+										<input type="email" name="email" id="email" placeholder="Email">
 									</div>
 									<div class="field">
 										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="button primary" /></li>
+									<li><input type="submit" value="Send Message" class="button primary"></li>
 								</ul>
 							</form>
 						</div>
@@ -429,11 +364,11 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="http://127.0.0.1:5000/#">information@untitled.ext</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="http://127.0.0.1:5000/#">(000) 000-0000</a>
 								</li>
 								<li>
 									<h3>Address</h3>
@@ -442,12 +377,12 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
+										<li><a href="http://127.0.0.1:5000/#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="http://127.0.0.1:5000/#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="http://127.0.0.1:5000/#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="http://127.0.0.1:5000/#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="http://127.0.0.1:5000/#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="http://127.0.0.1:5000/#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
 									</ul>
 								</li>
 							</ul>
@@ -455,17 +390,17 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">© Untitled. All rights reserved. Design: <a href="https://html5up.net/">HTML5 UP</a>.</div>
 
 			</div>
 
 		<!-- Scripts -->
-			<script src="../static/assets/js/jquery.min.js"></script>
-			<script src="../static/assets/js/jquery.scrolly.min.js"></script>
-			<script src="../static/assets/js/browser.min.js"></script>
-			<script src="../static/assets/js/breakpoints.min.js"></script>
-			<script src="../static/assets/js/util.js"></script>
-			<script src="../static/assets/js/main.js"></script>
+			<script src="./Rajpal&#39;s Portfolio_files/jquery.min.js.download"></script>
+			<script src="./Rajpal&#39;s Portfolio_files/jquery.scrolly.min.js.download"></script>
+			<script src="./Rajpal&#39;s Portfolio_files/browser.min.js.download"></script>
+			<script src="./Rajpal&#39;s Portfolio_files/breakpoints.min.js.download"></script>
+			<script src="./Rajpal&#39;s Portfolio_files/util.js.download"></script>
+			<script src="./Rajpal&#39;s Portfolio_files/main.js.download"></script>
 
-	</body>
-</html>
+	
+</body></html>
