--- a/Day51-60/Day57/templates/guess.html
+++ b/Day51-60/Day57/templates/guess.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Templating using Jinja</title>
+    <title>Guess Age & Gender</title>
 </head>
 <body>
     <h1>Hay {{ name.title() }}</h1>
