--- a/Day51-60/Day57/templates/index.html
+++ b/Day51-60/Day57/templates/index.html
@@ -10,6 +10,7 @@
     <h1>Hello World!</h1>
     <h2>{{5 * 6}}</h2>
     <h3>Random Number: {{ num }}</h3>
+<a href="{{ url_for('get_blog', num=num) }}">Go To Blog</a>
 </body>
 <footer>
     <p>Copyright {{ year }}. Built by Rajpal Nishad</p>
