--- a/Day51-60/Day59/upgraded blog/templates/about.html
+++ b/Day51-60/Day59/upgraded blog/templates/about.html
@@ -5,8 +5,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>About Me</h1>
-                            <span class="subheading">This is what I do.</span>
+                            <h1>About Psyko Ind</h1>
+                            <span class="subheading">Python Developer, Blogger & Tech Enthusiast</span>
                         </div>
                     </div>
                 </div>
@@ -17,9 +17,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>Hi! I'm Psyko Ind, a passionate Python developer and technology enthusiast. I love building web applications with Flask and sharing my knowledge through blogging. My goal is to make programming accessible and fun for everyone, whether you're a beginner or an experienced coder.</p>
+                        <p>On this blog, you'll find tutorials, guides, and tips about Python, Flask, web development, and more. I believe in hands-on learning and sharing real-world solutions to common coding challenges.</p>
+                        <p>Thank you for visiting! Feel free to connect with me or reach out via the contact page if you have questions or suggestions.</p>
                     </div>
                 </div>
             </div>
