--- a/Day51-60/Day59/upgraded blog/templates/contact.html
+++ b/Day51-60/Day59/upgraded blog/templates/contact.html
@@ -5,8 +5,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>Contact Me</h1>
-                            <span class="subheading">Have questions? I have answers.</span>
+                            <h1>Contact Psyko Ind</h1>
+                            <span class="subheading">Let's connect! I love to hear from fellow coders and learners.</span>
                         </div>
                     </div>
                 </div>
@@ -17,7 +17,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+                        <p>If you have questions, suggestions, or just want to say hi, fill out the form below. I'll get back to you as soon as possible. You can also reach out to me about Python, Flask, or any tech topic!</p>
                         <div class="my-5">
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
