--- a/Day61-70/Day61/templates/login.html
+++ b/Day61-70/Day61/templates/login.html
@@ -8,10 +8,21 @@
         <div class="container">
 		<h1>Login</h1>
         <!-- This is where our form will go. -->
-            <form action="/login" method="post">
+            <form action="{{ url_for('login') }}" method="post" novalidate>
                 {{ form.csrf_token }}
-                {{ form.email.label }} {{ form.email(size=30) }}
-                {{ form.password.label }} {{ form.password(size=30) }}
+                <p>
+                {{ form.email.label }} <br> {{ form.email(size=30) }}
+                    {% for error in form.email.errors %}
+                    <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                    </p>
+                <p>
+                {{ form.password.label }} <br> {{ form.password(size=30) }}
+                    {% for error in form.password.errors %}
+                    <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </p>
+                {{ form.submit() }}
             </form>
         </div>
 	</body>
