--- a/Day61-70/Day67/upgraded-blog/templates/index.html
+++ b/Day61-70/Day67/upgraded-blog/templates/index.html
@@ -27,7 +27,14 @@
           <h2 class="post-title">{{ post.title }}</h2>
           <h3 class="post-subtitle">{{ post.subtitle }}</h3>
         </a>
-        <!-- TODO: Add code to delete posts below -->
+        <!-- Delete anchor next to each post -->
+        <a
+          href="#"
+          class="text-danger ms-2 delete-post"
+          data-id="{{ post.id }}"
+          title="Delete post"
+          >✘</a
+        >
         <p class="post-meta">
           Posted by
           <a href="#">{{post.author}}</a>
